--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -9,6 +9,7 @@ header-шум - разноцветный шум (noise.jpg) - opacity 5
 deccaa - бежевый
 40312a - коричневый
 febf5d - оранжевый
+0092a1 - сине-зеленый
 
 125*95 - размер миниатюр Our Recent Projects
 Welcome to our site - под картинками есть тени
@@ -53,7 +54,7 @@ header:after {
   display: inline-block;
   left: 37px;
   font: 25pt "Yrsa", serif;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 4.4px;
   color: white;
 }
@@ -123,10 +124,15 @@ header:after {
   letter-spacing: 0.79px;
   color: white;
 }
+#header-block2 div p:hover {
+  color: #0092a1;
+}
+p.menu-active {
+  color: #0092a1 !important;
+}
 
 #last-menu-item {
   padding-right: 280px;
-
 }
 
 #search {
@@ -161,7 +167,7 @@ header:after {
 }
 .form-field input {
 	border: 0;
-  background-color: blue;
+  background: linear-gradient(#00748f, #009ba9);
 	height: 26px;
 	width: 200px;
 	padding-right: 30px;
@@ -191,10 +197,10 @@ header:after {
 	-webkit-appearance: none;
 	cursor: pointer;
   margin: auto;
-  background-color: blue;
+  background: linear-gradient(#00748f, #009ba9);
 }
 .form-button button:hover {
-	background: green;
+	background: #0092a1;
 }
 .form-button button:hover:active,  .form-button button:active {
 	background: green;
@@ -227,22 +233,14 @@ main:after{
 	clear: both;
 }
 
-main section {
-
-}
-
 /*=============MAIN-BLOCK1=================*/
 #main-block1 {
   position: relative;
-  background-color: grey;
   width: 100vw;
   padding-bottom: 100px;
   min-height: 400px;
   max-width: 1080px;
-}
-
-#main-block1 div {
-
+  background-image: url("pics/main_orange.jpg");
 }
 
 #main-block1-div1 article {
@@ -259,14 +257,15 @@ main section {
   max-width: 1006px;
   margin: 0 auto;
   z-index: 2;
+  border-radius: 6px;
 }
 
 #main-block1-div1 h2 {
   padding: 26px 50px 0px 44px;
   font: 21pt "Yrsa", serif;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 2.5px;
-  color: blue;
+  color: #0092a1;
 }
 #main-block1-div1 p {
   padding: 0px 22vw 0px 42px;
@@ -304,8 +303,6 @@ main section {
 #main-block1-div2 {
   position: relative;
   top: 47px;
-  background-color: blue;
-
   max-width: 1006px;
   height: 53px;
   margin: 0 auto;
@@ -315,6 +312,8 @@ main section {
   color: white;
   padding: 10px 0px 0px 42px;
   z-index: 1;
+  border-radius: 6px;
+  background: linear-gradient(#009ba9, #00748f);
 }
 
 #eye {
@@ -359,10 +358,10 @@ main section {
   margin-top: 43px;
   padding: 0px 0px 0px 36px;
   font: 21pt "Yrsa", serif;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 2px;
   word-spacing: -3px;
-  color: blue;
+  color: #0092a1;
 }
 
 #main-block2-div1 article {
@@ -419,7 +418,7 @@ main section {
 }
 .blog a {
   padding: 0 0 0 8px;
-  color: blue;
+  color: #0092a1;
   font-weight: 700;
   text-decoration: none;
 }
@@ -471,7 +470,7 @@ main section {
 	display: none;
   margin: -1px 0 0 0;
 	padding: 12px 0 0 12px;
-	background: blue;
+  background: linear-gradient(#009ba9, #00748f);
 	border: 1px solid #ddd;
   border-top: none;
   min-height: 160px;
@@ -501,7 +500,7 @@ main section {
   letter-spacing: 0.5px;
 	text-align: center;
 	color: white;
-	background: brown;
+	background: #40312a;
   width: 32.5%;
   border-bottom: 1px solid #fff;
 }
@@ -521,7 +520,7 @@ main section {
   border-left: 1px solid #fff;
   border-right: 1px solid #fff;
 	border-bottom: none;
-	background: blue;
+	background: #0092a1;
   color: white;
   width: 35%;
 }
@@ -542,7 +541,7 @@ main section {
   font-weight: 600;
   letter-spacing: 2.4px;
   word-spacing: -3px;
-  color: blue;
+  color: #0092a1;
 }
 
 #who {
@@ -568,7 +567,7 @@ main section {
 #main-block2-div2-article2 a {
   padding: 0 0 0 3px;
   word-spacing: 0px;
-  color: blue;
+  color: #0092a1;
   font-weight: 700;
   text-decoration: none;
 }
@@ -598,7 +597,6 @@ footer {
   position: relative;
   max-width: 1080px;
   min-width: 410px;
-  background-color: green;
   margin: 0 auto;
   margin-top: 35px;
 }
@@ -656,7 +654,7 @@ footer {
 }
 
 .footer-form input {
-  padding: 0 12px;
+  padding: 6px 12px 0 12px;
   height: 38px;
   width: 120px;
   margin: 10px 5px 12px 0;
@@ -668,6 +666,7 @@ footer {
 
 .footer-form textarea {
   min-height: 112px;
+  min-width: 290px;
   padding: 12px;
   font: 12pt "Yrsa", serif;
   font-weight: 600;
@@ -675,10 +674,10 @@ footer {
   border-radius: 2px;
 }
 
-::-webkit-input-placeholder {color:blue;}
-::-moz-placeholder          {color:blue;}
-:-moz-placeholder           {color:blue;}
-:-ms-input-placeholder      {color:blue;}
+::-webkit-input-placeholder {color:#0092a1;}
+::-moz-placeholder          {color:#0092a1;}
+:-moz-placeholder           {color:#0092a1;}
+:-ms-input-placeholder      {color:#0092a1;}
 
 #surname {
   width: 162px;
@@ -701,7 +700,7 @@ footer {
   color: white;
 }
 .footer-twitter a {
-  color: blue;
+  color: #0092a1;
   text-decoration: none;
   font-style: oblique;
 }
@@ -753,9 +752,9 @@ footer {
 /*=============FOOTER-BLOCK2=================*/
 #footer-block2 {
   position: relative;
-  background-color: blue;
   display: inline-block;
   min-height: 67px;
+  background: linear-gradient(#009ba9, #00748f);
 }
 
 #footer-block2 p {
