--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -66,6 +66,24 @@ header:after {
   margin-left: 250px;
   z-index: 2;
 }
+#header-block1 article::after {
+  position: absolute;
+  display: block;
+  top: -3px;
+  left: -32px;
+  width: 20px;
+  height: 40px;
+  content: "";
+  background-repeat: no-repeat, no-repeat;
+  background-position: 50% 100%, 50% 100%;
+  background-size: 2px 100%, 4px 100%;
+  background-origin: padding-box, border-box;
+  border-left: 2px solid transparent;
+  background-image: linear-gradient(0deg, rgba(202,147,44,0),
+    rgba(202,147,44,0.9) 50%, rgba(202,147,44,0)),
+    linear-gradient(0deg, rgba(255,203,117,0),
+    rgba(255,203,117,1) 50%, rgba(255,203,117,0));
+}
 
 #header-block1 div {
   display: inline-block;
@@ -641,7 +659,7 @@ footer {
 
 #footer-block1 {
   background-color: #40312a;
-  padding: 15px 0px 10px 25px;
+  padding: 15px 0px 8px 25px;
 }
 
 #footer-block1:after{
@@ -720,7 +738,12 @@ footer {
   margin-right: 0;
 }
 #submit {
-
+  width: 119px;
+  height: 32px;
+  font: 16pt "Yrsa", serif;
+  right: 12px;
+  letter-spacing: 0.8px;
+  border-style: solid;
 }
 
 #footer-block1-div3 h3 {
@@ -760,10 +783,6 @@ a.footer-button:hover {
   opacity: 0.7;
 }
 
-#submit {
-  right: 17px;
-  letter-spacing: 0.8px;
-}
 #portfolio {
   right: 15px;
 }
