--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -19,7 +19,7 @@ header {
   z-index: 10;
   top: 0;
   max-width: 1080px;
-  min-width: 410px;
+  min-width: 490px;
   margin: 0 auto;
 }
 
@@ -32,8 +32,9 @@ header:after {
 
 /*=============HEADER-BLOCK1=================*/
 #header-block1 {
+  position: relative;
   background: linear-gradient(#ffc54f, #ffaf4c);
-  padding: 5px 0 0px 0;
+  padding: 5px 0 0 0;
 }
 #header-block1::after {
   background-image: url("pics/noise.jpg");
@@ -62,7 +63,7 @@ header:after {
   display: inline-block;
   position: absolute;
   top: 33px;
-  right: 17px;
+  right: 37px;
   margin-left: 250px;
   z-index: 2;
 }
@@ -85,9 +86,13 @@ header:after {
     rgba(255,203,117,1) 50%, rgba(255,203,117,0));
 }
 
-#header-block1 div {
+#header-block1 a {
   display: inline-block;
   margin-right: 20.5px;
+}
+
+#header-block1 a:last-child {
+  margin-right: 0;
 }
 
 .icon {
@@ -132,7 +137,7 @@ header:after {
   display: inline-block;
   margin-left: 35px;
   height: 100%;
-  padding: 20px 0px 15px 0px;
+  padding: 20px 320px 15px 0px;
   width: 95%;
 }
 
@@ -163,7 +168,6 @@ a.menu-active {
   top: 5px;
   right: 38px;
   z-index: 11;
-  #margin-top: 0px;
 }
 
 #header-block2 div#search p {
@@ -817,14 +821,35 @@ a.footer-button:hover {
   background: linear-gradient(#009ba9, #00748f);
 }
 
-#footer-block2 p {
-  margin: 24px 37px;
+#footer-block2 div {
+  #position: relative;
+  display: inline-block;
+  margin: 8px 37px;
+}
+
+#footer-block2>div>p {
+  #margin: 24px 37px;
+  position: relative;
   display: inline-block;
   font: 11.5pt "Yrsa", serif;
   font-weight: 500;
   letter-spacing: 0.6px;
   color: white;
-  margin-right: 300px;
+  margin-right: 8px;
+}
+#footer-block2>div>p::after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 2px;
+  left: -7px;
+  height: 11px;
+  width: 2px;
+  border-left: 2px solid white;
+}
+#footer-block2>div>p:first-child::after {
+  border: 0;
+  #background-color: red;
 }
 
 #footer-block2 a {
@@ -838,7 +863,7 @@ a.footer-button:hover {
 #footer-block2 #footer-links {
   position: absolute;
   right: 0px;
-  bottom: 1px;
+  bottom: 10px;
   margin-right: 37px;
   margin-left: 150px;
 }
