--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -57,6 +57,7 @@ header:after {
   letter-spacing: 4.4px;
   color: white;
   text-transform: uppercase;
+  text-shadow: 0px -1px #daa;
 }
 
 #header-block1 article {
@@ -268,6 +269,16 @@ main:after{
   min-height: 400px;
   max-width: 1080px;
   background-image: url("pics/main_orange.jpg");
+  border-bottom: 2px solid green;
+}
+#main-block1::before {
+  display: block;
+  position: absolute;
+  bottom: 1px;
+  content: "";
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px solid red;
 }
 
 #main-block1-div1 article {
@@ -305,6 +316,7 @@ main:after{
   letter-spacing: 2.5px;
   color: #0092a1;
   text-transform: uppercase;
+  text-shadow: 0px -1px #000;
 }
 #main-block1-div1 p {
   padding: 0px 22vw 0px 42px;
@@ -337,6 +349,7 @@ main:after{
   border-radius: 5px;
   text-decoration: none;
   text-transform: uppercase;
+  text-shadow: 0px -1px #daa;
 }
 #main-block1-div1 #button2 {
   left: 70px;
@@ -362,6 +375,23 @@ main:after{
   background: linear-gradient(#009ba9, #00748f);
 }
 
+#main-block1-div2>p {
+  position: relative;
+  #background-color: green;
+  width: 500px;
+}
+#main-block1-div2>p::before {
+  display: block;
+  position: absolute;
+  content: "";
+  top: 12px;
+  left: 190px;
+  width: 0px;
+  height: 0px;
+  border: 6px solid transparent;
+  border-bottom: 9px solid rgb(255, 68, 0);
+}
+
 #eye {
   position:absolute;
   top: 90px;
@@ -372,6 +402,8 @@ main:after{
   background-color: white;
   background-size: cover;
   margin-left: 500px;
+  background-size: cover;
+  box-shadow: 3px 30px 27px -20px red;
 }
 #abstract {
   position:absolute;
@@ -382,6 +414,7 @@ main:after{
   z-index: 4;
   background-color: white;
   background-size: cover;
+  box-shadow: 3px 30px 27px -20px red;
 }
 
 /*=============MAIN-BLOCK2=================*/
@@ -500,6 +533,8 @@ main:after{
   min-width: 380px;
   z-index: 20;
   background: linear-gradient(#f5e3cd, #f8eedf);
+  border-left: 2px solid;
+  border-image: linear-gradient(to bottom, red, green) 1 100%;
 }
 
 #main-block2-div2-article1 {
@@ -665,8 +700,16 @@ footer {
   background-color: #40312a;
   padding: 15px 0px 8px 25px;
 }
-
-#footer-block1:after{
+#footer-block1::before{
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 0px;
+  width: 100%;
+	content: "";
+	border-top: 1px solid red;
+}
+#footer-block1::after{
 	content: "";
 	width: 100%;
 	display: block;
