--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -554,7 +554,7 @@ main:after{
   margin: -1px 0 0 0;
 	padding: 12px 0 0 12px;
   background: linear-gradient(#009ba9, #00748f);
-	border: 1px solid #ddd;
+	border: 1px solid white;
   border-top: none;
   min-height: 160px;
   border-radius: 0 0 5px 5px;
@@ -576,6 +576,7 @@ main:after{
 }
 
 .tabs>label {
+  position: relative;
 	display: inline-block;
   margin: 0px -4px 0px 0px;
   padding: 13px 13px 5px 13px;
@@ -586,12 +587,24 @@ main:after{
 	color: white;
 	background: #40312a;
   width: 32.5%;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid red;
 }
 .tabs>label:hover {
 	color: #888;
 	cursor: pointer;
 }
+
+.tabs>label::before {
+  position: absolute;
+  display: block;
+  content: "";
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px solid green;
+}
+
 #tab1-label {
   border-radius: 5px 0 0 0;
 }
@@ -608,6 +621,9 @@ main:after{
   color: white;
   width: 35%;
   text-shadow: 0px -1px #555;
+}
+.tabs>input:checked+label::before {
+  border: none;
 }
 
 #tab1:checked~#content-tab1, #tab2:checked~#content-tab2, #tab3:checked~#content-tab3 {
