--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -554,7 +554,7 @@ main:after{
   margin: -1px 0 0 0;
 	padding: 12px 0 0 12px;
   background: linear-gradient(#009ba9, #00748f);
-	border: 1px solid white;
+	#border: 1px solid white;
   border-top: none;
   min-height: 160px;
   border-radius: 0 0 5px 5px;
@@ -586,8 +586,8 @@ main:after{
 	text-align: center;
 	color: white;
 	background: #40312a;
-  width: 32.5%;
-  border-bottom: 1px solid red;
+  width: 33.33%;
+  border-bottom: 1px solid #40312a;
 }
 .tabs>label:hover {
 	color: #888;
@@ -602,7 +602,7 @@ main:after{
   left: 0px;
   width: 100%;
   height: 1px;
-  border-bottom: 1px solid green;
+  border-bottom: 1px solid #009ba9;
 }
 
 #tab1-label {
@@ -614,16 +614,38 @@ main:after{
 
 .tabs>input:checked+label {
 	color: #555;
-  border-left: 1px solid #fff;
-  border-right: 1px solid #fff;
+  border-left: 1px solid #40312a;
+  border-right: 1px solid #40312a;
 	border-bottom: none;
-	background: #0092a1;
+	background: #009ba9;
   color: white;
-  width: 35%;
+  width: 33.35%;
   text-shadow: 0px -1px #555;
 }
 .tabs>input:checked+label::before {
-  border: none;
+  content: "";
+  position: absolute;
+  left: -2px;
+  width: 102%;
+  height: 42px;
+  border-bottom: none;
+  border-left: 1px solid #009ba9;
+  border-right: 1px solid #009ba9;
+  z-index: 999;
+}
+
+#tab1:checked+label {
+  border-left: none;
+}
+#tab1:checked+label::before {
+  border-left: none;
+  width: 103%;
+}
+#tab3:checked+label {
+  border-right: none;
+}
+#tab3:checked+label::before {
+  border-right: none;
 }
 
 #tab1:checked~#content-tab1, #tab2:checked~#content-tab2, #tab3:checked~#content-tab3 {
