--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -21,6 +21,7 @@ header {
   max-width: 1080px;
   min-width: 490px;
   margin: 0 auto;
+  z-index: 999;
 }
 
 header:after {
@@ -333,14 +334,14 @@ main:after{
 #main-block1-div1 .main-block1-button {
   display: inline-block;
   position: relative;
-  top: 28px;
+  left: 43px;
   width: 170px;
   height: 45px;
-  text-align: center;
-  left: 43px;
-  padding: 13px 3px 0px 0;
   margin-bottom: 40px;
+  margin-top: 28px;
+  padding: 13px 3px 0px 0;
   background: linear-gradient(#ffc54f, #ffaf4c);
+  text-align: center;
   font: 11.65pt "Montserrat", sans-serif;
   font-weight: 600;
   color: white;
@@ -425,9 +426,14 @@ main:after{
 /*======MAIN-BLOCK2-DIV1=====*/
 #main-block2-div1 {
   position: relative;
+  top: 1px;
+  left: 1px;
   width: 62.3%;
-  float: left;
+  display: inline-block;
+  #float: left;
   min-width: 410px;
+  #background-color: green;
+  vertical-align: top;
 }
 
 #main-block2-div1 h2 {
@@ -528,8 +534,10 @@ main:after{
 /*======MAIN-BLOCK2-DIV2=====*/
 #main-block2-div2 {
   display: inline-block;
-  width: 37.7%;
+  width: 37.3%;
   min-width: 380px;
+  #width: 30%;
+  #min-width: 350px;
   z-index: 20;
   background: linear-gradient(#f5e3cd, #f8eedf);
   border-left: 2px solid;
@@ -649,7 +657,7 @@ main:after{
   border-bottom: none;
   border-left: 1px solid #009ba9;
   border-right: 1px solid #009ba9;
-  z-index: 999;
+  z-index: 10;
 }
 
 #tab1:checked+label {
@@ -938,14 +946,12 @@ a.footer-button:hover {
 }
 
 #footer-block2>div {
-  #position: relative;
   display: inline-block;
   margin: 8px 37px 0 37px;
   padding-right: 250px;
 }
 
 #footer-block2>div>p {
-  #margin: 24px 37px;
   position: relative;
   display: inline-block;
   font: 11.5pt "Yrsa", serif;
